# Authority

./: .gitignore  README.md  abstracts.txt  authors.csv  authors.xlsx  doc.txt  docker_mongo.sh  final_script.ipynb  fini_bhl.ipynb  fini_self.ipynb  main.py  profile  profile.out  pyproject.toml  script_with_comments.ipynb  script_with_instructions.ipynb  util.ipynb  verify_db.py
.ipynb_checkpoints/: final_script-checkpoint.ipynb  util-checkpoint.ipynb
authority/algorithm/: clustering.py  compare.py  compute_ratio.py  features.py  heuristics.py  interpolate.py  smooth.py  triplet_violations.py
authority/parse/: citation_crossref.py  parse.py
authority/process/: clean.py  files.py  (+2 more)
clustering/: clustering.py  main_firstinitial.py  script.sh  store.sh  store_clusters_to_db.py
data/: README.md
database/: README.md
google_scholar/: scholar.py
plots/: Blocks_vs_authors.xlsx  author_names_vs_identified_authors.xlsx  blocks_publication_year_diff.xlsx  plots.ipynb  validation_data_across_journals.xlsx  validation_data_across_years.xlsx
previous_data/: r_final.json  r_x6.json  r_x7.json
profiles/: baselines.profile  bhl.profile  features.profile  initial_inference.profile  old_inference.profile  parse.profile  sample_pairs.profile  self_citations.profile  small_clustering_improvement.out  subset.profile  validate_old.profile  validate_older.profile  validation_dec_14.profile
r_table/: README.md  requirements.txt
reference/: fini_gs.ipynb  util.ipynb  util2.ipynb
resolution/: __init__.py  utils.py
scripts/: all.py  analysis.py  analyze_language_feature.py  analyze_name_frequency.py  analyze_ratio_table.py  analyze_validation_union.py  authority_features.py  authority_inference.py  authority_ratio_table.py  authority_sample_pairs.py  authority_subset.py  backup.py  baselines.py  bhl.py  block.py  bound_pairs.py  clean_bhl.py  clear.py  clear_bhl.py  count_scholar_labels_sanity_check.py  counts.py  create_biodiversity_validation.py  create_google_scholar_validation.py  create_heuristic_training_data.py  create_local_mesh_database.py  create_mesh_from_fast_text.py  create_mesh_from_slow_api.py  create_orcid_validation.py  create_self_citation_pairs.py  create_self_citation_training_data.py  create_self_citation_validation.py  create_semantic_scholar_validation.py  create_tabular_training_data.py  crossref.py  custom_restore.py  debug_validate.py  download_bhl.py  download_bhl_most_frequent.py  establish_validation_union.py  evaluate_gs.py  (+73 more)
(+2347 files in other folders)
