[tool.poetry]
name = "authority"
version = "0.1.0"
description = "Authority method for author name disambiguation"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.7"
regex = "^2022.7.25"
requests = "^2.28.1"
numpy = "^1.23.2"
pylint = "^2.14.5"
rich = "^12.5.1"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
