[tool.poetry]
name = "authority"
version = "0.1.0"
description = "Authority method for author name disambiguation"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nltk = "^3.7"
regex = "^2022.7.25"
requests = "^2.28.1"
numpy = "^1.23.2"
pylint = "^2.14.5"
rich = "^12.5.1"
pymongo = "^4.2.0"
xmltodict = "^0.13.0"
scholarly = "^1.7.2"
skr-web-api = {git = "https://github.com/lhncbc/skr_web_python_api.git", rev = "main"}
requests-html = "^0.10.0"
textblob = "^0.17.1"
snakeviz = "^2.1.1"
scipy = "^1.9.1"
Levenshtein = "^0.20.3"
seaborn = "^0.12.0"
pandas = "^1.4.4"
inflection = "^0.5.1"
sklearn = "^0.0"
crossref-commons = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
